--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <h2 class="game-winner-text" id="game-winner-text">The Computer won the game</h2>
         <h3 class="computer-score" id="computer-score">Computer Score: 19</h3>
         <div class="cards-container" id="cards-container">
-            <div class="card-1 card"></div>
-            <div class="card-2 card" ></div>
+            <div class="card-1 card" id="card-1"></div>
+            <div class="card-2 card" id="card-2"></div>
         </div>
         <h3 class="your-score" id="your-score">Your Score: 14</h3>
         <button class="draw-btn" id="draw-btn">Draw</button>
     </div>
 </body>
-<script src="index.html"></script>
+<script src="index.js"></script>
 </html>
