--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <div class="container" id="container">
         <nav class="nav-section">
             <button class="new-deck-btn" id="new-deck-btn">New Deck</button>
-            <h4 class="remaining-cards" id="remaining-cards">Remaining cards: 52</h4>
+            <h4 class="remaining-cards" id="remaining-cards"></h4>
         </nav>
-        <h2 class="game-winner-text" id="game-winner-text">The Computer won the game</h2>
-        <h3 class="computer-score" id="computer-score">Computer Score: 19</h3>
+        <h2 class="game-winner-text" id="game-winner-text"></h2>
+        <h3 class="computer-score" id="computer-score"></h3>
         <div class="cards-container" id="cards-container">
             <div class="card-1 card" id="card-1"></div>
             <div class="card-2 card" id="card-2"></div>
         </div>
-        <h3 class="your-score" id="your-score">Your Score: 14</h3>
+        <h3 class="your-score" id="your-score"></h3>
         <button class="draw-btn" id="draw-btn">Draw</button>
     </div>
 </body>
